styles.css
@font-face {
    font-family: 'Raleway';
    font-style: normal;
    font-weight: 300;
    src: url(https://fonts.gstatic.com/s/raleway/v37/1Ptug8zYS_SKggPNyCAIT5lu.woff2) format('woff2');
    unicode-range: U +0460 -052F, U +1C80 -1C8A, U +20B4, U +2DE0 -2DFF, U + A640-A69F, U + FE2E-FE2F;
}

body{
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
    padding: 50px;
    box-sizing: border-box;
    height: 100vh;
    margin: 0;
    background-color:#18191A;
    color: white;
    
}
.main{
    height: 100%;
    width: clamp(600px, 70%, 1000px);
    /* border: 2px solid red; */
    padding: 20px;
    box-sizing: border-box;
    text-align: center;
    display: flex;
    flex-direction: column;
    font-size: 1.2rem;
    border-radius: 25px;
    background-color: #242528;
}
form{
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    margin-bottom: 20px;
    /* gap: 20px; */

}
.form-group{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: start;
    height: 100px;
    gap: 10px;
    padding: 15px;
    font-size: 1.3rem;
    box-sizing: border-box;
    
}
.form-group  input,select{
    /* width: 100%; */
    /* height: 1fr; */
    width: 100%;
    flex-grow: 1;
    font-size: 1.2rem;
}
.form-group.text{
    width: clamp(200px,27%,500px);
    
}
.form-group.num ,.form-group.stat{
    width: clamp(100px,15%,300px);
}
.form-group.btt{
    display: block;
    width: clamp(200px,15%,300px);
    height: 80%;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 60px;
    
}
.btt input{
    flex-grow: 1;
    border: none;
    padding: 10px;
    font-size: 1.2rem;
    border-radius: 35px;
}
.table{
    display: flex;
    display: 100%;
}
table{
     width: 100%;
}
tr{
    height: 4rem;
    width: 100%;
}
td{
    font-size: 1.3rem;
}
th{
    font-size: 1.4rem;
    font-weight: bold;
}
 table {
    border-collapse: collapse;
}
td,th{
    padding: 15px 20px ;
    text-align: left;
    border-bottom: 1px solid grey;
    /* border-radius: 50px; */
}
td button {
    height: 50px;
    width: 120px;
    font-size: 1.2rem;
    border-radius: 15px;
    padding: 15px;
    border: none;
}
table{
    background-color: #2B2C2F;
    border-radius: 20px;
}
tr:hover{
    background-color: #303134;
}


input , select,button{
    border: none;
    border-radius: 5px;
    background-color: #3D3F43;
    padding-left:5px ;
    color: white;
    border: none;
}

input:focus , select:focus,button:hover,input:hover{
    background-color: #4B4D51;
    border: none;
    transform: scale(1.05);
}

a {
    color: white;
    text-decoration: none;
    transition: color 0.2s ease;
}

a:hover {
    color: #4f8cff;
}

